Commit all changes
